k8s/00-ns.yml
---
apiVersion: v1
kind: Namespace

metadata:
  name: light-demo-k8s-ha-application
