k8s/01-traefik-middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: allow-cors-all
  namespace: light-demo-k8s-ha-application
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
