k8s/20-frontend.yml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: light-demo-k8s-ha-application
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend
    spec:
      # Define anti-affinity to prefer spreading pods across different nodes
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - frontend
              topologyKey: kubernetes.io/hostname
      # Define containers in deployment
      containers:
      - image: sorena/light-demo-k8s-ha-application:1.0.0
        name: frontend
        # Define liveness probe, pod is restarted if failed
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
        # Define readiness probe, pod is included in traffic load balancing when successful
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 2

---
apiVersion: v1
kind: Service

metadata:
  name: frontend-svc
  namespace: light-demo-k8s-ha-application
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: frontend

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: frontend-ingress
  namespace: light-demo-k8s-ha-application
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`application.ha.k8s.demo.thyme.lightops.dk`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: allow-cors-all
    services:
    - name: frontend-svc
      namespace: light-demo-k8s-ha-application
      port: 80
